--- a/SQL.html
+++ b/SQL.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="Home.html" class="logo"><strong>Portfolio</strong> <span>by Perkins</span></a>
+						<a href="Index.html" class="logo"><strong>Portfolio</strong> <span>by Perkins</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,14 +28,14 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="Home.html">Home</a></li>
+							<li><a href="Index.html">Home</a></li>
 							<li><a href="Python.html">Python Projects</a></li>
 							<li><a href="R.html">R Projects</a></li>
 							<li><a href="Tableau.html">Tableau Projects</a></li>
 							<li><a href="SQL.html">SQL Projects</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="Home.html" class="button primary fit">Explore</a></li>
+							<li><a href="Index.html" class="button primary fit">Explore</a></li>
 							
 						</ul>
 					</nav>
