--- a/R.html
+++ b/R.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="Home.html" class="logo"><strong>Portfolio</strong> <span>by Perkins</span></a>
+						<a href="Index.html" class="logo"><strong>Portfolio</strong> <span>by Perkins</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,14 +29,14 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="Home.html">Home</a></li>
+							<li><a href="Index.html">Home</a></li>
 							<li><a href="Python.html">Python Projects</a></li>
 							<li><a href="R.html">R Projects</a></li>
 							<li><a href="Tableau.html">Tableau Projects</a></li>
 							<li><a href="SQL.html">SQL Projects</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="Home.html" class="button primary fit">Explore</a></li>
+							<li><a href="Index.html" class="button primary fit">Explore</a></li>
 							
 						</ul>
 					</nav>
