Update and rename SQL.html to sql.html

--- a/sql.html
+++ b/sql.html
@@ -28,14 +28,14 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="Index.html">Home</a></li>
-							<li><a href="Python.html">Python Projects</a></li>
-							<li><a href="R.html">R Projects</a></li>
-							<li><a href="Tableau.html">Tableau Projects</a></li>
-							<li><a href="SQL.html">SQL Projects</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="python.html">Python Projects</a></li>
+							<li><a href="r.html">R Projects</a></li>
+							<li><a href="tableau.html">Tableau Projects</a></li>
+							<li><a href="sql.html">SQL Projects</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="Index.html" class="button primary fit">Explore</a></li>
+							<li><a href="index.html" class="button primary fit">Explore</a></li>
 							
 						</ul>
 					</nav>
