--- a/sql.html
+++ b/sql.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="Index.html" class="logo"><strong>Portfolio</strong> <span>by Perkins</span></a>
+						<a href="index.html" class="logo"><strong>Portfolio</strong> <span>by Perkins</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
