--- a/python.html
+++ b/python.html
@@ -49,8 +49,8 @@
 									<header class="major">
 										<h1>Python Projects</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>This portfolio contains all projects executed using Python.</p>
+									<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+									<p>This segment of the portfolio contains all projects executed using Python. Most of the projects have been done using the web-based interactive computing platform, Jupyter Notebook.</p>
 								</div>
 							</section>
 
@@ -61,41 +61,15 @@
 
 						<div class="row">
 							<div class="col-6 col-12-small">
-								<h2><a href="#">Project 1<br /></a></h2>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Project Description.</p>
+								<h2><a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/Computer%20Vision%20Project.ipynb">Classification of medical x-ray images using Computer Vision.<br /></a></h2>
+								<a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/Computer%20Vision%20Project.ipynb" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+								<h3>20 April 2022</h3>
+								<p>The aim of this project was to design a comparative experimental validation framework to test different computer vision and machine learning algorithms which will help in the classification of medical x-ray images from three different body sections; Knee, Hand and Chest.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button">View Project</a></li>
+									<li><a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/Computer%20Vision%20Project.ipynb" class="button">View Project</a></li>
 								</ul>
 							</div>
-
-							<div class="col-6 col-12-small">
-								<h2><a href="#">Project 2<br /></a></h2>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Project Description.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">View Project</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-12-small">
-								<h2><a href="#">Project 3<br /></a></h2>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Project Description.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">View Project</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-12-small">
-								<h2><a href="#">Project 4<br /></a></h2>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Project Description.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">View Project</a></li>
-								</ul>
-							</div>
-							
+						
 			<section class="split">
 				<!-- Contact -->
 					<section id="contact">
