--- a/r.html
+++ b/r.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tableau Projects by Perkins</title>
+		<title>R Projects by Perkins</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -64,36 +64,36 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="" class="image">
-										<img src="images/pic06.jpg" alt="" data-position="center center" />
+									<a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/R%20Statistical%20Analysis%20Project.Rmd" class="image">
+										<img src="images/pic15.jpg" alt="" data-position="center center" />
 									</a>
 									<ul class="actions">
-										<li><a href="" class="button">View Project</a></li>
+										<li><a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/R%20Statistical%20Analysis%20Project.Rmd" class="button">View Project</a></li>
 									</ul>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h2>Date</h2>
+												<h3>15 April 2022</h3>
 											</header>
-											<h3>Project Title</h3>
-											<p>Project Description.</p>
+											<h3>Evaluation and Comparison of Algorithm Effectiveness using Hypothetical Online Banking Data</h3>
+											<p>In this project, a comparison of the performance/effectiveness of two algorithms will be carried out. Please download the html version of the project <a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/R-Statistical-Analysis-Project.html"> here </a> to view the visualisations. </p>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="" class="image">
-										<img src="images/pic06.jpg" alt="" data-position="top center" />
+									<a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/Aquaculture%20Data%20Analysis%20Project.Rmd" class="image">
+										<img src="images/pic16.jpg" alt="" data-position="top center" />
 									</a>
 									<ul class="actions">
-										<li><a href="" class="button">View Project</a></li>
+										<li><a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/Aquaculture%20Data%20Analysis%20Project.Rmd" class="button">View Project</a></li>
 									</ul>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h2>Date</h2>
+												<h3>14 March 2022</h3>
 											</header>
-											<h3>Project Title</h3>
-											<p>Project Description.</p>
+											<h3>Analysis of Aquaculture Data and Prediction Using Machine Learning Algorithm</h3>
+											<p>This project involves the use of two datasets which contain records of fish escapes into the wild, and the results of water analysis. Both datasets have a level of alignment. The goal of this project is to perform analysis on a merged version of the datasets using a learning model to predict the specie of fishes that escape from a fish farm in an escape incident. Please view the pdf report of the project <a href="https://github.com/Perkins-Offi/PortfolioProjects/blob/main/Aquaculture%20Data%20Analysis%20Project.pdf"> here.</a></p>
 											
 										</div>
 									</div>
