--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</header>
 							<div class="content">
 								<p>Data Analyst skilled in Python, R, SQL and Tableau <br />
-								With exceptional knowledge of geoscience.</p>
+								With exceptional knowledge of geosciences.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Explore</a></li>
 								</ul>
@@ -116,7 +116,7 @@
 									<header class="major">
 										<h2>Oghenerie Perkins Offi</h2>
 									</header>
-									<p>Oghenerie Perkins Offi is a UK based Nigerian first class graduate of Geology. He holds a Masters Degree in Integrated Petroleum Geosciences, and is currently upskilling in Data Analytics. He is highly skilled with exceptional knowledge in Geosciences and Data Analysis. This portfolio follows his steady growth to becoming a Data Analyst.</p>
+									<p>Perkins is a UK-based Nigerian first class graduate of Geology. He holds a Masters Degree in Integrated Petroleum Geosciences from the University of Aberdeen, and is currently studying for a Masters Degree in Data Science at the Robert Gordon University. He is highly skilled with exceptional knowledge in Geosciences and Data Analysis. This portfolio follows his steady growth to becoming a Data Analyst.</p>
 									<ul class="actions">
 										<li><a href="#one" class="button next">Explore</a></li>
 									</ul>
